--- a/quora/templates/base.html
+++ b/quora/templates/base.html
@@ -63,16 +63,16 @@
               <ul class="nav navbar-nav navbar-right">
                 <li><a data-toggle="modal" data-target="#howitworks" href="#">How it works</a></li>
               </ul>
-              {% if not hide_search %}
-                <form class="navbar-form navbar-left" role="search" action="{% url 'search' %}">
-                  <div class="input-group" style="width:350px;">
-                    <input type="text" class="form-control" name="q" placeholder="Find questions">
-                    <span class="input-group-btn">
-                      <button type="submit" class="btn btn-default">Find</span></button>
-                    </span>
-                  </div>
-                </form>
-              {% endif %}
+              <!--{% if not hide_search %}-->
+                <!--<form class="navbar-form navbar-left" role="search" action="{% url 'search' %}">-->
+                  <!--<div class="input-group" style="width:350px;">-->
+                    <!--<input type="text" class="form-control" name="q" placeholder="Find questions">-->
+                    <!--<span class="input-group-btn">-->
+                      <!--<button type="submit" class="btn btn-default">Find</span></button>-->
+                    <!--</span>-->
+                  <!--</div>-->
+                <!--</form>-->
+              <!--{% endif %}-->
             </div>
           </div>
         </nav>
@@ -131,7 +131,7 @@
             new google.elements.transliteration.TransliterationControl(options);
         // Enable transliteration in the textfields with the given ids.
 
-        var ids = ["langu", "language"];
+        var ids = ["lang", "langu", "language"];
         control.makeTransliteratable(ids);
 
         // Show the transliteration control which can be used to toggle between
