--- a/quora/static/css/quora.css
+++ b/quora/static/css/quora.css
@@ -8,7 +8,7 @@ body {
 
 main .container {
     margin-bottom: 2em;
-    background-color: #efe4e4;
+    background-color: #ffffff;
     padding-top: 1.2em;
     padding-bottom: 1.2em;
 }
