--- a/quora/questions/templates/questions/write.html
+++ b/quora/questions/templates/questions/write.html
@@ -9,10 +9,10 @@
     <div class="col-md-offset-2 col-md-8">
         {{ form.errors }}
         <form id="translControl" action="{% url 'write' %}" method="post" role="form">{% csrf_token %}
-                <p>Title</p>
-                <p><input class="form-control input-lg" id="lang" maxlength="255" name="title" type="text"></p>
-                <p>Content</p>
-                <p><textarea class="form-control" cols="40" id="langu" maxlength="4000" name="content" rows="10"></textarea></p>
+                <p>Question</p>
+                <p><input class="form-control input-lg" id="lang" maxlength="555" name="title" type="text"></p>
+                <!--<p>Content</p>-->
+                <!--<p><textarea class="form-control" cols="40" id="langu" maxlength="4000" name="content" rows="10"></textarea></p>-->
                 <p>Tags</p>
                 <p><input class="form-control" id="id_tags" maxlength="255" name="tags" type="text"> <span class="helptext">Use spaces to separate tags</span><input id="id_status" name="status" type="hidden"></p><br>
                 <div class="form-group">
