social login added

--- a/quora/core/templates/core/fblogin.html
+++ b/quora/core/templates/core/fblogin.html
@@ -11,8 +11,11 @@
     <h2 class="centered">Quora</h2>
     <p class="centered">Get answers to your questions.</p>
     <hr>
-    <a href="{% url 'social:begin' 'facebook' %}" class="btn btn-block btn-lg big-fb-button btn-social btn-facebook">
+    <a href="/accounts/facebook/login/?process=login" class="btn btn-block btn-lg big-fb-button btn-social btn-facebook">
         <span class="fa fa-facebook"></span> Sign in with Facebook
+    </a>
+     <a href="/accounts/google/login/?process=login" class="btn btn-block btn-lg big-fb-button btn-social btn-google">
+        <span class="fa fa-google"></span> Sign in with Google
     </a>
   </div>
 </div>
